# WinArm64Template

./: CMakeLists.txt  CMakePresets.json  Preset-VS2022-Clang.json  Preset-VS2022-MSVC.json
cmake/: arm64x.cmake
src/: main.cpp
